<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/business_register_page"
    android:background="?attr/background_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".activity.BusinessRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollable_business_register_page"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="149dp"
                android:padding="0dp">


                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Register\n Below!"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_fast_food_svgrepo_com" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/businessRegisterProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="?attr/button_color"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editBusinessTextName"
                            style="@style/modifiedEditText"
                            android:backgroundTint="?attr/edittext_background"
                            android:hint="Name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editBusinessTextEmail"
                            style="@style/modifiedEditText"
                            android:backgroundTint="?attr/edittext_background"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editBusinessTextMobile"
                            style="@style/modifiedEditText"
                            android:hint="Mobile Number"
                            android:backgroundTint="?attr/edittext_background"
                            android:inputType="phone"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editBusinessTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:backgroundTint="?attr/edittext_background"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/businessImageInput"
                        android:layout_height="200dp"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <ImageView
                            android:layout_gravity="center"
                            android:id="@+id/businessImagePreview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxWidth="350dp"
                            android:maxHeight="400dp"
                            android:src="@drawable/ic_baseline_add_photo_alternate_24"/>

                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/imageProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"/>

                    <Button
                        android:id="@+id/addImageButton"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="?attr/edittext_background"
                        android:text="Add Image"
                        android:textColor="@color/black"
                        />


                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirBusinessRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Register"
                        android:textColor="@color/white"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />


                    <TextView
                        android:id="@+id/existingBusinessAccount"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Sign-in to existing account"
                        android:onClick="toBusinessLoginPage"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/business_register_sidebutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="toBusinessLoginPage"
        android:src="@drawable/ic_back_img" />
</RelativeLayout>