...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="?attr/background_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:id="@+id/business_login_page"
    tools:context=".activity.BusinessLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
...
