...
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/business_home_page"
    android:background="?attr/background_color"
    tools:context=".activity.BusinessHomeActivity">
    <include
        android:id="@+id/include"
        layout="@layout/appbar"
        />
...
